# game-of-life-optimizations

./: CMakeLists.txt  LICENSE  README.md
benchmarks/: 01_simple_eve-500x500.csv  02_uint8-fast_eve-500x500.csv  03_padded_eve-500x500.csv  04_less-oop_eve-500x500.csv  05_encoded_eve-500x500.csv  simple_eve-300x300.csv
src/: FieldBenchmark.cpp  FieldBenchmark.h  GameField.cpp  GameField.h  GameSettings.h  GameWidget.h  Pattern.h  Presets.h  RLE.h  SimpleMatrix.h  accessors.h  main.cpp
